prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_ternary_mismatch.nut
// EXPECTED: compile-time error - ternary produces int|string, var only accepts int
local flag = true
local x: int = flag ? 42 : "hello"
return x
